# RDI-Agent

./: .gitignore  README.md  pyproject.toml
docs/: DEBUG_TESTING.md  TESTING.md
src/reality_agent/: __init__.py  cli.py  graph.py  llm.py  state.py
src/reality_agent/adapters/: memory_adapter.py
src/reality_agent/nodes/: build_knowledge.py  environment_discovery.py  evidence_gate.py  isolate_iteration.py  measurement_check.py  observe_freeze.py  reality_check.py  setup_guide.py
src/reality_agent/prompts/: measurement_check.txt  reality_check.txt  traps_detection.txt
src/reality_agent/tools/: benchmark_tools.py  debug_tools.py  force_patch.py  memguard_tools.py  traps_detection.py
tests/: test_benchmark_tools.py  test_debug_tools.py  test_environment_discovery.py  test_evidence_gate.py  test_force_patch.py  test_graph_routing.py  test_llm_structured_outputs.py  test_measurement_rejection.py  test_memory_adapter.py  test_rdi_memguard_integration.py  test_setup_guide.py  test_state_transitions.py  test_success_criteria.py
